# rigrun

./: .dockerignore  .gitignore  ARCHITECTURE.md  AUTHENTICATION_IMPLEMENTATION.md  BATTLE_PLAN.md  BUSINESS_EVALUATION_REPORT.md  CHANGELOG.md  CLI_REFERENCE.md  COMPETITIVE_INTEL_SUMMARY.md  CONTEXT_COST_DISPLAY_EXAMPLES.md  CONTEXT_COST_DISPLAY_IMPLEMENTATION.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  IMPLEMENTATION_SUMMARY.md  INTEL_DESIGN_COMPLETE.md  LICENSE  LICENSE-COMMERCIAL.md  NOTICE  PHASE_4.3_COMPLETION.md  PHASE_4.4_COMPLETION.md  PHASE_4.5_COMPLETION.md  PHASE_COMPLETION_REPORT.md  README.md  REDDIT_POST.md  RELEASE_NOTES_v0.2.0.md  REMEDIATION_PLAN.md  SESSION_ROTATION_GUIDE.md  TEST_SUITE_ARCHITECTURE.md  ask  ask.bat  auth_patch.txt  benchmark.ps1  docker-compose.yml  fire_queries.ps1  fix_cache_store.py  install.ps1  install.sh  rigrun_agent.ps1  security_headers_middleware.txt  (+3 more)
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
benchmarks/: README.md  RESULTS.md  queries.json  realistic_test.ps1  run_benchmark.ps1  simple_test.ps1
docs/: API.md  COMPARISON.md  COMPETITIVE_INTEL_SYSTEM_DESIGN.md  CONFIGURATION.md  GETTING_STARTED.md  GPU_COMPATIBILITY.md  INTEL_ARCHITECTURE_DIAGRAM.txt  INTEL_CAPABILITIES_MATRIX.md  INTEL_QUICK_START.md  INTEL_SYSTEM_README.md  QUICKSTART.md  RACE_DETECTION.md  UX_2.0_DESIGN_SPEC.md  api-reference.md  comparison-with-litellm.md  contributing.md  error-messages.md  getting-started.md  index.html  installation.md  security.md  troubleshooting.md
examples/: README.md  error_demo.rs
examples/intel/: example_module_company_overview.go  example_orchestrator.go
go-tui/: .gitignore  AUTOMATED_TEST_PLAN.md  BACKGROUND_TASK_SYSTEM_IMPLEMENTATION.md  BOUNDARY_PROTECTION_IMPLEMENTATION.md  CODEBASE_INDEXING_IMPLEMENTATION.md  CODEBASE_INDEXING_INTEGRATION.md  COMPLETION_IMPLEMENTATION_SUMMARY.md  COMPLETION_VISUAL_DEMO.md  COST_DASHBOARD_CHECKLIST.md  COST_DASHBOARD_IMPLEMENTATION.md  EXPORT_FEATURE_SUMMARY.md  EXPORT_INTEGRATION.md  IL5_COMPLIANCE_GAP_ANALYSIS.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_SUMMARY.md  INLINE_DIFFS_IMPLEMENTATION.md  INSTALL.md  INTEGRATION_PATCH.md  MANUAL_TEST_PLAN.md  NIST_800_53_IL5_COMPLIANCE_MATRIX.md  OPTIMIZATION_IMPLEMENTATION_GUIDE.md  PERFORMANCE_OPTIMIZATION_REPORT.md  PLAN_MODE.md  PORTING_BATTLE_PLAN.md  PROGRESSIVE_HELP_IMPLEMENTATION.md  PROGRESS_INDICATOR_README.md  README.md  SPILLAGE_SECURITY_FIXES.md  STREAMING_OPTIMIZATION.md  TAB_COMPLETION_INTEGRATION.md  TRAINING_IMPLEMENTATION_COMPLETE.md  TUI_COMMAND_PLAN.md  TUI_IL5_COMPLIANCE_PLAN.md  VIM_QUICK_REFERENCE.md  WORLD_CLASS_EXPERIENCE_PLAN.md  config.example.toml  coverage.out  go.mod  go.sum  intel_prompt.txt  (+3 more)
go-tui/cmd/installer/: disk_unix.go  disk_windows.go  doc.go  installer.go  main.go  welcome.go
go-tui/docs/: CHANGELOG_ERROR_ENHANCEMENTS.md  ERROR_DISPLAY.md  ERROR_DISPLAY_COMPARISON.md  OPENROUTER_FREE_MODELS.md
go-tui/internal/: ac4_e2e_test.go  concurrency_test.go  integration_test.go
go-tui/internal/benchmark/: README.md  benchmark.go  doc.go  results.go  tests.go
go-tui/internal/cli/: SHARED_INFRASTRUCTURE.md  agreements_cmd.go  args.go  ask.go  audit_cmd.go  auth_cmd.go  backup_cmd.go  boundary_cmd.go  cache_cmd.go  chat.go  classify_cmd.go  cli.go  cli_test.go  config.go  configmgmt_cmd.go  confirm.go  conmon_cmd.go  consent.go  crypto_cmd.go  doc.go  doctor.go  encrypt_cmd.go  errors.go  helpers.go  incident_cmd.go  intel_cmd.go  json_output.go  lockout_cmd.go  maintenance_cmd.go  rbac_cmd.go  sanitize_cmd.go  sectest_cmd.go  session_cmd.go  setup.go  status.go  styles.go  suggest.go  terminal.go  test.go  training_cmd.go  (+3 more)
go-tui/internal/cloud/: client.go  client_test.go  doc.go  stream.go
go-tui/internal/commands/: benchmark_handler.go  commands_test.go  completion.go  completion_test.go  doc.go  handlers.go  index_cmd.go  parser.go  registry.go
go-tui/internal/config/: config.go  config_test.go  doc.go
go-tui/internal/context/: FEATURE_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  (+15 more)
go-tui/scripts/: install.ps1  install.sh
installer/: build.bat  rigrun-setup.iss
local-rag-rust-server/: Cargo.toml
local-rag-rust-server/src/: cli_session.rs  lib.rs
local-rag-rust-server/src/router/: mod.rs
local-rag-rust-server/src/security/: mod.rs  session_manager.rs
local-rag-rust-server/src/server/: mod.rs
marketing/: DEVTO_ARTICLE.md  FORMAL_MARKETING_PLAN.md  HACKER_NEWS.md  LAUNCH_PLAN.md  PRESS_KIT.md  REDDIT_POSTS.md  TWITTER_THREAD.md
scripts/: check_size.ps1  set_ollama_vulkan_permanent.bat  start_ollama_vulkan.bat
src/: audit.rs  background.rs  classification_ui.rs  cli_session.rs  colors.rs  consent_banner.rs  conversation_store.rs  error.rs  firstrun.rs  lib.rs  main.rs  status_indicator.rs  types.rs  utils.rs
src/cli/: completer.rs  input.rs  mod.rs
src/cloud/: mod.rs
src/context/: mod.rs
src/detect/: mod.rs
src/download/: manager.rs  mod.rs  state.rs  types.rs
src/errors/: mod.rs
src/firstrun/: mod.rs  wizard.rs
src/health/: mod.rs
src/local/: mod.rs
src/router/: mod.rs
src/security/: locks.rs  mod.rs  session_manager.rs
src/server/: mod.rs
src/setup/: mod.rs
src/stats/: mod.rs
tests/: README.md  integration_tests.rs  race_detection_test.rs
(+255 files in other folders)
