# =============================================================================
# Binary Size Optimization Notes
# =============================================================================
# Current size: ~6.4 MB (release build, unoptimized profile)
# Target size:  <15 MB (comfortably met, can aim for <5 MB with aggressive opts)
#
# Dependency analysis:
# - tokio (full): Heavy but necessary for async runtime. Consider using
#   only needed features if size becomes critical.
# - reqwest: Large due to TLS. Using default features which pulls in rustls.
# - chrono: Could be replaced with 'time' crate for smaller footprint.
# - inquire: Interactive prompts add weight. Keep for UX.
# - tracing/tracing-subscriber: Good balance of features vs size.
#
# The release profile below enables aggressive size optimization.
# Build with: cargo build --release
# =============================================================================

[package]
name = "rigrun"
version = "0.2.0"
edition = "2021"
description = "Local-first LLM router. Your GPU first, cloud when needed."
license = "MIT"
repository = "https://github.com/rigrun/rigrun"
keywords = ["llm", "ai", "router", "ollama", "gpu"]
categories = ["command-line-utilities", "web-programming"]
homepage = "https://github.com/rigrun/rigrun"
documentation = "https://github.com/rigrun/rigrun"

[dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }

# Web server
axum = "0.7"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP client
reqwest = { version = "0.12", features = ["json", "blocking", "stream"] }

# Async stream utilities
futures-util = "0.3"
tokio-stream = "0.1"

# CLI parsing
clap = { version = "4.5", features = ["derive"] }

# TTY detection for stdin
atty = "0.2"

# Error handling
anyhow = "1.0"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Config directory
dirs = "5.0"

# Colored output for CLI
colored = "2.1"

# Interactive prompts
inquire = "0.7"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Rate limiting and middleware
tower = "0.4"
tower-http = { version = "0.5", features = ["timeout"] }
tower_governor = "0.4"

# Ordered map with serde support
indexmap = { version = "2.0", features = ["serde"] }

# Terminal manipulation for live stats
crossterm = "0.27"

# Random number generation for UUIDs
rand = "0.8"

# Regex for secret redaction
regex = "1"

# Hostname detection for audit logging
hostname = "0.3"

[[bin]]
name = "rigrun"
path = "src/main.rs"

[lib]
name = "rigrun"
path = "src/lib.rs"

# =============================================================================
# Release Profile - Optimized for Binary Size
# =============================================================================
[profile.release]
opt-level = "z"          # Optimize for size (aggressive)
lto = true               # Link-time optimization (full)
codegen-units = 1        # Better optimization (slower compile)
panic = "abort"          # Smaller binary, no unwinding
strip = true             # Strip symbols from binary
